# AT00BY10-3012-Ohjelmistojen-yll-pito-ja-testaus

./: .gitignore  .gitmodules  LICENSE  README.md
1/: README.html  README.md
2/: README.md  eslint.config.js  package-lock.json  package.json
2/test/: math.test.js
2_Unit_testing/: README.md  main.js  math.js
2_Unit_testing/test/: math.test.js
3/: eslint.config.js  package-lock.json
3/controllers/: rgbRoute.js
3/requests/: test.rest
3/test/: route.test.js  unit.test.js
3_Integration_Testing/: README.md  app.js  main.js  package.json
3_Integration_Testing/public/: index.html  script.js
4/: .gitignore  README.md  pylock.toml  pyproject.toml
4/tests/: test_verkkokauppa.py
5/: README.md
5/public/: style.css
5/utils/: hex.js
6/: README.md  eslint.config.js  package.json
6/src/: app.js  counter.js  index.html  main.js  middleware.js
6/tests/: counter.integration.test.js
6/tests/helpers/: LogCapture.js
6_Logging/: README.md  package-lock.json
6_Logging/src/: logger.js  routes.js
6_Logging/tests/: counter.test.js  logger.test.js  test.rest
7_Versioning_and_Licensing/: README.md
